@@ -223,6 +223,8 @@
                     let analysed = "<tr><td>[% analysed_tracks_text %]</td><td>"+count+"</td></tr>";
                     let fcount = undefined!=resp.result.failed ? parseInt(resp.result.failed) : 0;
                     let failed = fcount > 0 ? "<tr><td>[% failed_tracks_text %]</td><td>"+fcount+"</td></tr>" : undefined;
+                    let icount = undefined!=resp.result.ignored ? parseInt(resp.result.ignored) : 0;
+                    let ignored = icount > 0 ? "<tr><td>[% ignored_tracks_text %]</td><td>"+icount+"</td></tr>" : undefined;
                     let status = analyserIsRunning && undefined!=resp.result.msg ? "<tr><td>[% analysis_status_text %]</td><td>"+resp.result.msg+"</td></tr>" : undefined;
                     let start = undefined;
                     let duration = undefined;
@@ -240,6 +242,9 @@
                     msg += analysed;
                     if (undefined!=failed) {
                         msg += failed;
+                    }
+                    if (undefined!=ignored) {
+                        msg += ignored;
                     }
                     if (undefined!=start) {
                         msg += start;
