@@ -216,6 +216,9 @@ BLISSMIXER_ANALYSED_TRACKS
 BLISSMIXER_FAILED_TRACKS
 	EN	Failed:
 
+BLISSMIXER_IGNORED_TRACKS
+	EN	'Ignored':
+
 BLISSMIXER_ANALYSER_EXCLUDE_MEDIA_FOLDERS
 	EN	Exclude media folders
 
