@@ -3,6 +3,7 @@
 1. Use 'number' type for integer input fields.
 2. Count tracks when analysis completes.
 3. Add a button to update ignore, even if no tracks have been added.
+4. Show number of 'ignored' tracks in settings page.
 
 0.8.1
 -----
